fixed "no image" not showing in control panel. tweaked header and footer a little.

--- a/src/main/webapp/resources/styles.css
+++ b/src/main/webapp/resources/styles.css
@@ -86,7 +86,7 @@ img
 #wrapper
 {
 	width: 800px;
-	margin: 2em auto;
+	margin: 2em auto 0;
 }
 
 .clear
@@ -564,4 +564,23 @@ label#amount
 #control-panel td, #control-panel th
 {	
 	border-width: 0;
+}
+
+#footer
+{
+	text-align: center;
+	font-size: 10pt;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#298cba));
+	background-image: -moz-linear-gradient(-90deg,#f9f9f9,#298cba);
+	background-color: #f9f9f9;
+	padding: 3em 0 1em;
+}
+
+#head-gradient
+{
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#298cba), to(#f9f9f9));
+	background-image: -moz-linear-gradient(-90deg,#298cba,#f9f9f9);
+	background-color: #f9f9f9;
+	padding: 3em 0 1em;
+	margin-bottom: -4em;
 }
